--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,33 +1,23 @@
+name: Java CI with Maven
+
 on:
   push:
-    branches:
-      - dev
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  hello_world_job:
+  build:
+
     runs-on: ubuntu-latest
-    name: A job to build and push docker
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_PASS }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          pull: true
-          push: true
-          cache-from: type=registry,ref=hustakin/hello-world-docker-action:latest
-          cache-to: type=inline
-          tags: hustakin/hello-world-docker-action:latest
-          build-args: PROFILE=nectar,ARG2=test
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B test --file pom.xml
