--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3308/test
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3309/corkdork
 spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
