Add RabbitMQ to docker-compose.yml to run in project network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,11 @@ services:
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
       - MYSQL_DATABASE=corkdork
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    restart: always
+    ports:
+      - "15672:15672"
+      - "5672:5672"
