--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,10 @@
             <artifactId>javaee-api</artifactId>
             <version>8.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
