--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,3 +21,5 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B test --file pom.xml
+      - name: Surefire Report
+        uses: ScaCap/action-surefire-report@v1
