--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Test Reporter
+      - name: Reporter
         uses: dorny/test-reporter@v1.5.0
 
       - name: Log in to the Container registry
